manifests/core/04-traefik/traefik-dashboard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik.pantheon.schouten-lebbing.nl
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: pantheon.schouten-lebbing.nl
  sessionAffinity: None
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-websecure
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`traefik.pantheon.schouten-lebbing.nl`) && PathPrefix(`/dashboard`)"
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
    - match: "Host(`traefik.pantheon.schouten-lebbing.nl`) && PathPrefix(`/api`)"
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
